favourite things button added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,8 @@
   <div class="container">
     <div class="jumbotron">
       <h1 class="display-4"><%= title %></h1>
-      
-        <a class="btn btn-primary" href="/favourite-things" role="button">Favourite Things</a>
+
+        <a class="btn btn-primary" href="/favourite-things" role="button">See Favourite Things</a>
       
     </div>
   </div>
